# sauna-crawler

./: README.md  pyproject.toml  sample.html
sauna_crawler/: .gitignore  main.py  original_logger.py  test.py
sauna_crawler/client/: geocoding_client.py
sauna_crawler/crawler/: saunaikitai_crawler.py  saunaikitai_detail_crawler.py
sauna_crawler/data/: sauna_data.csv
sauna_crawler/slack/: slack_emoji.py  slack_util.py
tests/: test_sauna_crawler.py
